--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,20 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Airbnb</title>
-  </head>
-  <body>
-    <h1>working</h1>
-    <form method="GET" action="/listings/new">
-      <button>New Listing</button>
-    </form>
-    <ul>
-      <% allListings.map((x)=>{ %>
-      <li><a href="/listings/<%=x.id%>"><%=x.title%></a></li>
-
-      <% }) %>
-    </ul>
-  </body>
-</html>
+<% layout("/layouts/boilerplate.ejs")%>
+<body>
+  <h1>All Listings</h1>
+  <div class="row row-cols-lg-3 row-cols-md-3 row-cols-sm-1">
+    <% allListings.map((x) => { %>
+    <div class="card" style="width: 18rem">
+      <img src="<%= x.image.url %>" class="card-img-top" alt="..." />
+      <div class="card-body">
+        <p class="card-text">
+          <%= x.title %> <br />
+          &#8377; <%= x.price.toLocaleString("en-IN") %>
+        </p>
+      </div>
+    </div>
+    <% }) %>
+  </div>
+</body>
