--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,14 +1,35 @@
 <% layout("/layouts/boilerplate.ejs")%>
-<body>
-  <h1><%=result.title%></h1>
-  <p><%=result.description%></p>
-  <ul>
-    <li>&#8377; <%= result.price.toLocaleString("en-IN")%></li>
-    <li><%= result.location %></li>
-    <li><%= result.country%></li>
-    <a href="/listings/edit/<%=result.id%>"><button>edit</button></a>
-    <form method="post" action="/listings/<%=result.id%>/delete?_method=Delete">
-      <input type="submit" value="Delete" />
-    </form>
-  </ul>
-</body>
+
+<div class="row">
+  <div class="col-8 offset-2">
+    <div class="card">
+      <img
+        src="<%=result.image.url%>"
+        class="card-img-top show-img"
+        alt="..."
+      />
+      <div class="card-body">
+        <b><p><%=result.title%></p></b>
+        <p><%=result.description%></p>
+        <ul>
+          <li>&#8377; <%= result.price.toLocaleString("en-IN")%></li>
+          <li><%= result.location %></li>
+          <li><%= result.country%></li>
+        </ul>
+      </div>
+      <div class="btns">
+        <a href="/listings/edit/<%=result.id%>"
+          ><button class="btn btn-dark">edit</button></a
+        >
+        <form
+          method="post"
+          action="/listings/<%=result.id%>/delete?_method=Delete"
+        >
+          <input type="submit" value="Delete" />
+        </form>
+      </div>
+        
+      </div>
+    </div>
+  </div>
+</div>
