--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,17 +1,29 @@
 <% layout("/layouts/boilerplate.ejs")%>
 <body>
-  <h1>All Listings</h1>
-  <div class="row row-cols-lg-3 row-cols-md-3 row-cols-sm-1">
+  <div class="row row-cols-lg-4 row-cols-adjust">
     <% allListings.map((x) => { %>
-    <div class="card" style="width: 18rem">
-      <img src="<%= x.image.url %>" class="card-img-top" alt="..." />
-      <div class="card-body">
-        <p class="card-text">
-          <%= x.title %> <br />
-          &#8377; <%= x.price.toLocaleString("en-IN") %>
-        </p>
+    <a
+      href="/listings/<%=x.id%>"
+      class="listing-link"
+      style="text-decoration: none"
+    >
+      <div class="card" style="width: 18rem">
+        <img
+          src="<%= x.image.url %>"
+          class="card-img-top listing-index-img"
+          alt="listing-img"
+        />
+        <div class="card-img-overlay"></div>
+        <div class="listing-card-body">
+          <p class="listing-card-text">
+            <b><%= x.title %></b> <br />
+            &#8377; <%= x.price.toLocaleString("en-IN") %>/ night
+            <i class="tax-info">&nbsp; &nbsp; + 18% GST</i>
+          </p>
+        </div>
       </div>
-    </div>
+    </a>
+
     <% }) %>
   </div>
 </body>
