--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -17,7 +17,8 @@
         <div class="listing-card-body">
           <p class="listing-card-text">
             <b><%= x.title %></b> <br />
-            &#8377; <%= x.price.toLocaleString("en-IN") %>/ night
+            &#8377; <%= (typeof x.price === "number" ?
+            x.price.toLocaleString("en-IN") : "N/A") %>/ night
             <i class="tax-info">&nbsp; &nbsp; + 18% GST</i>
           </p>
         </div>
