--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,6 +1,13 @@
-<nav class="navbar navbar-expand-lg bg-body-light sticky-top">
+<nav
+  class="navbar navbar-expand-lg navbar-light bg-light shadow-sm sticky-top border-bottom"
+>
   <div class="container-fluid">
-    <a class="navbar-brand" href="/"><i class="fa-solid fa-compass"></i></a>
+    <!-- Brand -->
+    <a class="navbar-brand fw-bold text-primary" href="/">
+      <i class="fa-solid fa-compass me-2"></i>
+    </a>
+
+    <!-- Toggler -->
     <button
       class="navbar-toggler"
       type="button"
@@ -12,8 +19,11 @@
     >
       <span class="navbar-toggler-icon"></span>
     </button>
+
+    <!-- Menu -->
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
+      <!-- Left links -->
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
@@ -23,6 +33,28 @@
         <li class="nav-item">
           <a class="nav-link" href="/listings/new">Add New Listing</a>
         </li>
+      </ul>
+
+      <!-- Right links -->
+      <ul class="navbar-nav mb-2 mb-lg-0">
+        <% if(!currUser){ %>
+        <li class="nav-item">
+          <a class="nav-link" href="/signup">
+            <i class="fa-solid fa-user-plus me-1"></i>Sign Up
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/login">
+            <i class="fa-solid fa-right-to-bracket me-1"></i>Login
+          </a>
+        </li>
+        <% } %> <% if (currUser) {%>
+        <li class="nav-item">
+          <a class="nav-link text-danger fw-bold" href="/logout">
+            <i class="fa-solid fa-right-from-bracket me-1"></i>Log Out
+          </a>
+        </li>
+        <% } %>
       </ul>
     </div>
   </div>
